--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,26 @@
   }
 }
 
+h1 {
+  text-align: center;
+	font-family: 'Dancing Script';
+  color: rgba(136, 0, 248, 0.624);
+	font-size: 80px;
+	margin-bottom: 30px;
+}
+
+h3 {
+	text-align: center;
+	font-family: 'Dancing Script', cursive;
+  font-size: 40px;
+  color: bisque;
+	margin-bottom: 30px;
+}
+
+p {
+  font-family: 'Open Sans', sans-serif;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -24,4 +44,31 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+.container {
+  text-align: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.container div {
+  height: 500px;
+  width: 400px;
+  background: rgb(49, 38, 38);
+  margin: 10px;
+  display: inline-block;
+}
+
+#div1 {
+  float: left;
+  background-color:rgba(222, 71, 71, 0.409);
+}
+#div3 {
+  float: left;
+  background-color:rgba(59, 32, 165, 0.409);
+}
+#div2 {
+  float: left;
+  background-color:rgba(145, 145, 4, 0.409);
 }
