--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,3 +72,13 @@ body {
   float: left;
   background-color:rgba(145, 145, 4, 0.409);
 }
+
+textarea {
+  background-color: #0000008d;
+}
+
+button {
+  padding: 5px;
+  background-color: rgba(0, 255, 255, 0.193);
+  border-style: groove;
+}
