added splash screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
 h1 {
   text-align: center;
 	font-family: 'Dancing Script';
-  color: rgba(136, 0, 248, 0.624);
+  color: rgb(255, 255, 255);
 	font-size: 80px;
 }
 
